# Pinnacle_100_Sample_Applications

./: .gitignore  .gitmodules  Jenkinsfile  README.md  p100_sample_apps.code-workspace  pinnacle_firmware.code-workspace  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/arm/cell_iot/: Kconfig  Kconfig.board  Kconfig.defconfig  cell_iot.dts  cell_iot.yaml  cell_iot_defconfig
app/boards/arm/newcastle/: Kconfig  Kconfig.board  Kconfig.defconfig  newcastle.dts  newcastle.yaml  newcastle_defconfig
app/src/: app_bt.c  app_bt.h  app_led.c  app_led.h  console_rx.c  console_rx.h  hl7800.c  hl7800.h  main.c
apps/: run_tests.bat  tasks.py
apps/aws_connect/: CMakeLists.txt  README.rst
apps/aws_connect/src/certs/: 74e10f78bc_dev_cert.der  74e10f78bc_dev_private_key.der
apps/coap_dtls/: CMakeLists.txt  Kconfig  README.rst  prj.conf
apps/coap_dtls/include/: certificate.h  config.h
apps/coap_dtls/src/: laird_coap.c  lte.c
apps/coap_dtls/src/certs/: client_cert.der  client_cert.pem  client_privkey.der  client_privkey.pem  laird-dev-nbiot-caTrustStore.der  pinnacle_test_cert.der  pinnacle_test_cert.pem  pinnacle_test_key_nopass.der  root_server_cert.der  root_server_cert.pem
apps/edrx_tcp_server_reply/: CMakeLists.txt  README.rst  tcp_server_reply.py
apps/edrx_tcp_server_reply/include/: config.h
apps/http_get/: README.rst
apps/http_get_query/: README.rst  prj.conf
apps/http_get_query_check/: CMakeLists.txt  README.rst
apps/low_power/: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
apps/low_power/docs/: PSM_logic_trace.sal  eDRX_logic_trace.sal
apps/low_power/include/: config.h  http_get.h  led.h
apps/low_power/src/: http_get.c  led.c  lte.c  main.c  power.c
apps/lte_console/: CMakeLists.txt  README.md  README.rst  prj.conf
apps/lte_console/include/: app_bt.h  app_led.h  console_rx.h  version.h.in
apps/lte_console/src/: app_bt.c  app_led.c  bas.c  console_rx.c  console_rx.h  cts.c  dis.c  hl7800.c  hl7800.h  hrs.c  main.c
apps/oob_demo/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
apps/oob_demo/docs/: ble.md
apps/oob_demo/include/: aws.h  ble_aws_service.h  ble_cellular_service.h  certificate.h  led.h  lte.h  nv.h  oob_ble.h  oob_common.h  oob_config.h
apps/oob_demo/src/: aws.c  ble_aws_service.c  ble_cellular_service.c  led.c  lte.c  main.c  nv.c  oob_ble.c  oob_ble.h  oob_cellular.c  oob_cellular.h  oob_common.h
apps/regression_test/: CMakeLists.txt  README.rst  prj.conf
apps/regression_test/src/: Bootloader_External_Settings.h  main.c
apps/spi_flash/: CMakeLists.txt
apps/spi_flash/src/: FOTA.c  FOTA.h  HexCode.c  HexCode.h  MscCRC32.c  MscCRC32.h  Verification.c  Verification.h  target.h
apps/tcp_echo_client/: README.rst
apps/tcp_echo_client/src/: main.c
apps/udp_echo_client/: CMakeLists.txt  README.rst  prj.conf
apps/udp_echo_client/src/: main.c
boards/arm/newcastle/: Kconfig  Kconfig.defconfig  newcastle_defconfig
boards/arm/pinnacle_100_dvk/: pinnacle_100_dvk.dts  pinnacle_100_dvk_defconfig
boards/arm/sirrus_100_dvk/: Kconfig  Kconfig.board  Kconfig.defconfig  sirrus_100_dvk.dts  sirrus_100_dvk.yaml  sirrus_100_dvk_defconfig
common/include/: led.h
common/src/: led.c  lte.c
nordic/: s140_nrf52_6.1.0_MBR_only.hex
tests/aws_connect/: CMakeLists.txt  prj.conf
tests/aws_connect/src/: certificate.h  config.h  main.c
tests/coap_dtls/: CMakeLists.txt  prj.conf
tests/coap_dtls/include/: certificate.h  config.h  laird_coap.h
tests/coap_dtls/src/: laird_coap.c  lte.c  main.c
tests/coap_dtls/src/certs/: laird-dev-nbiot-caTrustStore.pem  pinnacle_test_key_nopass.pem  root_server_cert.der  root_server_cert.pem
tests/edrx_tcp_server_reply/: CMakeLists.txt  prj.conf
tests/edrx_tcp_server_reply/include/: config.h
tests/edrx_tcp_server_reply/src/: main.c
tests/http_get/: CMakeLists.txt  prj.conf
tests/http_get/src/: main.c
tests/http_get_query/src/: main.c
tests/http_get_query_check/: CMakeLists.txt
tests/http_get_query_check/src/: main.c
tests/python_test_env/: check.py  constants.py  nordicfunctions.py  serialfunctions.py  westfunctions.py
tests/tcp_echo_client/: CMakeLists.txt  prj.conf  tcpecho.py
tests/tcp_echo_client/src/: main.c
tests/udp_echo_client/: CMakeLists.txt  prj.conf  udpecho.py
tests/udp_echo_client/src/: main.c
